@@ -1,0 +1,1 @@
+DIST nsupdate-info-0.9.0.tar.gz 247972 SHA256 97bda37087e3e5698c1e0e4fa54f4e447592225422b7b49bb8d5a5164b48da12 SHA512 177e2596f5be68716acad89b42dda489079ae4fa6b2ce299ee009b3f82c5fef9a9733a97004a13c5f0051eb24b4bf4f28a5a1c30db10fcf5e01341b5e6ad764d WHIRLPOOL 002ba01c802bb5d6db79aa1d64867019b747040a2fcbd8a1fa827194c59b57cb6c76a7b27980a5442f3413a337476e96824c0742bc805195ad19e7ed40e10ae9
